feat: use conceptual layers
