# backend/internal/errors/dto.go
@@ -1,0 +1,5 @@
+package errors
+
+type ErrorGeneral struct {
+	Message string `json:"meesage" example:"message error"`
+}
